# from-scratch

./: .gitignore  README.md  devc-cpu.Dockerfile  devc-gpu.Dockerfile  devc.Dockerfile  devcontainer.Dockerfile  env.yml  env_macos_intel.yml  environment.yml  envlinux.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  env.yml
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
attention/: attention.ipynb  bahdanau.ipynb  general_attention.ipynb  self_attention.ipynb
autoencoder/: autoencoder.ipynb
bloom-filters/: Cargo.toml
bpe_tokeniser/: byte_pair_tokenisation.ipynb
lstm_pos_tagger/: postagger_lstm.ipynb
transformer/: pos_encoding.ipynb
vae/: vae.ipynb  vae_cnn_fashionmnist.ipynb
xlstm/: lstm.ipynb  slstm.ipynb
