[project]
name = "from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "ipython>=9.5.0",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.6",
    "mkl>=2025.2.0",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]
